[Fix] Mobile session table time overflow.

--- a/src/assets/scss/session.scss
+++ b/src/assets/scss/session.scss
@@ -79,6 +79,7 @@
           background-color: $black;
           color: $white;
           font-size: 16px;
+          z-index: 1;
 
           p {
             font-family: 'Fira Code', monospace;
@@ -90,6 +91,7 @@
           box-sizing: border-box;
           border-bottom: 1px solid rgba($black, .4);
           padding: 8px;
+          z-index: 0;
 
           &:last-child {
             border: 0;
